# jnigen

./: .gitignore  Cargo.toml  LICENSE  README.md  input.json
src/: ejni_types.rs  fmt.rs  main.rs  models.rs
src/codegen/: class.rs  interface.rs  mod.rs  mod_file.rs
